--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
-    "eslint-plugin-tailwindcss": "^3.12.1"
+    "eslint-plugin-tailwindcss": "^3.12.1",
+    "tailwindcss-animate": "^1.0.6"
   }
 }
