--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.6",
+    "@t3-oss/env-nextjs": "^0.6.0",
     "@tanstack/react-query": "^4.29.15",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
@@ -21,8 +22,11 @@
     "axios": "^1.4.0",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
+    "encoding": "^0.1.13",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "firebase": "^10.0.0",
+    "firebase-admin": "^11.9.0",
     "lucide-react": "^0.248.0",
     "next": "13.4.7",
     "postcss": "8.4.24",
@@ -31,7 +35,8 @@
     "react-hot-toast": "^2.4.1",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "eslint-plugin-tailwindcss": "^3.12.1",
