--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,18 @@
-API_URL=""
-USER_EMAIL=""
+NEXT_PUBLIC_API_URL=""
+NEXT_PUBLIC_USER_EMAIL=""
+
+# Session configuration
+
+EXPIRES_IN_SESSION=604800000
+
+# Firebase client configuration
+NEXT_PUBLIC_FIREBASE_API_KEY=""
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=""
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=""
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=""
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=""
+NEXT_PUBLIC_FIREBASE_APP_ID=""
+
+# Firebase admin configuration
+FIREBASE_CLIENT_EMAIL=""
+FIREBASE_PRIVATE_KEY=""
