--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,4 @@ NEXT_PUBLIC_FIREBASE_APP_ID=""
 # Firebase admin configuration
 FIREBASE_CLIENT_EMAIL=""
 FIREBASE_PRIVATE_KEY=""
+FIRABASE_DATABASE_URL=""
