--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "firebase-admin": "^11.9.0",
     "lucide-react": "^0.248.0",
     "next": "13.4.7",
+    "next-themes": "^0.2.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
