--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "class-variance-authority": "^0.6.0",
+    "cloudinary": "^1.37.3",
     "clsx": "^1.2.1",
     "encoding": "^0.1.13",
     "eslint": "8.43.0",
