chore: add cloudinary variables example

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,10 @@ NEXT_PUBLIC_FIREBASE_APP_ID=""
 FIREBASE_CLIENT_EMAIL=""
 FIREBASE_PRIVATE_KEY=""
 FIREBASE_DATABASE_URL=""
+
+# Cloudinary configuration
+# Cloudinary configuration
+CLOUDINARY_CLOUD_NAME=""
+CLOUDINARY_API_KEY=""
+CLOUNDINARY_API_SECRET=""
+CLOUDINARY_FOLDER=""
