--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "vitest"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.1",
@@ -48,7 +49,11 @@
     "zustand": "^4.3.9"
   },
   "devDependencies": {
+    "@testing-library/react": "^14.0.0",
+    "@vitejs/plugin-react": "^4.0.3",
     "eslint-plugin-tailwindcss": "^3.12.1",
-    "tailwindcss-animate": "^1.0.6"
+    "jsdom": "^22.1.0",
+    "tailwindcss-animate": "^1.0.6",
+    "vitest": "^0.33.0"
   }
 }
